syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

import "v1/collection.proto";
import "v1/recipe.proto";
import "v1/recipe-tag.proto";
import "v1/profile-info.proto";

message GetRecipeRequest {
  string recipeId = 1;
  string userId = 2;
  optional string language = 3;
  optional string translatorId = 4;
  bool translate = 5;
  string subscriptionPlan = 6;
}

message GetRecipeResponse {
  Recipe recipe = 1;
  map<string, CollectionInfo> collections = 2;
  map<string, RecipeTag> tags = 3;
  map<string, string> tagGroups = 4;
  map<string, RecipeProfileInfo> profilesInfo = 5;
}
